zeit.content.article changes
============================

3.5.0 (unreleased)
------------------

- Add DAV-Property ``is_breaking`` to mark articles that were created as
  breaking news, so the frontend can do different things to them (WEB-319).

- Split off EditorHelper test baseclass, for reuse from other packages.


3.4.7 (2014-07-02)
------------------

- Temporarily removed posting of breaking news to Facebook as we cannot yet
  handle images correctly in that scenario.


3.4.6 (2014-06-20)
------------------

- Configure twitter/facebook main account for breaking news (VIV-416).


3.4.5 (2014-06-20)
------------------

- Reactivate social media section, implement Facebook (VIV-387, VIV-371).

- Reactivate breaking news feature (again), make title character limit soft,
  group checkboxes differently, add Twitter/Facebook (VIV-25).

- Shorten twitter text if it is too long (VIV-370).

- Add button to retract breaking news banner (VIV-418).

- Fix filename rewriting: handle multiple umlauts, remove special characters at
  the end of the name (VIV-409).


3.4.4 (2014-06-05)
------------------

- Fix icon position in sprite (VIV-359, VIV-407)


3.4.3 (2014-06-05)
------------------

- Restrict rewriting of filenames to articles and breaking news,
  don't accidentally rewrite image filenames, for example.


3.4.2 (2014-06-04)
------------------

- Disable breaking news feature for the time being (again).


3.4.1 (2014-06-03)
------------------

- Deactivate social media section until Facebook is implemented (VIV-387).


3.4.0 (2014-06-03)
------------------

- Fix save of WhYSIWYG editor when the user clicks on an input field (VIV-395)

- Reactivate breaking news feature; add max length to title field (VIV-25).

- Add social media section (VIV-387 / VIV-396).

- Add block for referencing an external Liveblog (WEB-246).

- Rewrite filenames to match the SEO expectations while typing (VIV-338).

- Register and cleanup keydown event handlers properly (VIV-381).
